--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/galeria.css">
     <script src="https://kit.fontawesome.com/ce4b0e445d.js" crossorigin="anonymous"></script>
-    <script>
-    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-    </script>
 </head>
 
 <body>
@@ -53,9 +50,7 @@
         <img class="flor" src="img/flor.png" alt="palmeras">
         <div class="nosotros">
             <div class="texto-nosotros">
-                <p>"<span>Abuela Angelina</span> es una de las pocas residencias que hasta el día de la fecha es atendida por su dueño,
-                    <span>Enrique</span>, quien nombró a este espacio bajo el nombre de una persona muy querida, y recordada por su familia, como una mujer simpática y adorable. Su legado de cuidado y dedicación, son los valores que dejaron una huella
-                    en este hogar".</p>
+                <p>"<span>Abuela Angelina</span> es una hogareña residencia, atendida a diario por su dueño, Enrique, quien nombró a este espacio bajo el nombre de una persona muy querida y recordada por su familia, como una mujer simpática y adorable. Su legado de cuidado y dedicación, son los valores que dejaron una huella en este hogar</p>
             </div>
             <div class="separador">
             </div>
@@ -76,19 +71,20 @@
             <div class="servicio-index">
                 <img class="icon-serv" src="img/medical.png" alt="iconos">
                 <h3>Servicios de Salud</h3>
-                <p>Contamos con distintos profesionales, capacitados para brindar los servicios médicos y de cuidado esencial que requieren nuestros residentes para poder llevar su estadía de la mejor manera.</p>
+                <p>Gracias a nuestro equipo de profesionales altamente capacitados, es que podemos atender tanto a personas autovalidas como a quienes precisan de mayor atención, brindando los servicios médicos y de cuidado esencial que requieren para poder llevar su estadía de la mejor manera.</p>
             </div>
             <div class="servicio-index">
                 <img class="icon-serv" src="img/cama.png" alt="iconos">
                 <h3>Servicios de Acomodación</h3>
                 <p>
-                    Nuestra casa cuenta con una gran superficie de 620m2 de edificado. Estructura de 2 plantas, 5 baños, un gran jardín y un ascensor para mayores comodidades.
+                    Nuestra casa cuenta con una gran superficie de 620m2 de edificado, con 2 plantas, 5 baños, un gran jardín, un ascensor y constantes adaptaciones para las necesidades de quienes residen en ella para una total y verdadera comodidad.
                 </p>
             </div>
             <div class="servicio-index">
                 <img class="icon-serv" src="img/corazon.png" alt="iconos">
                 <h3>Servicios Generales</h3>
-                <p>Estamos dedicados al desarrollo óptimo de nuestros residentes, es por eso que contamos con actividades lúdicas, fiestas temáticas, WiFi, peluquería entre otras.
+                <p>Dedicados con gran vocación al cuidado óptimo de nuestros residentes intentando que se sientan como en casa, es por eso que los acompañamos con actividades lúdicas, festejo de todos los cumpleaños, fiestas temáticas, visitas, peluquería entre otras.
+
                 </p>
             </div>
         </div>
@@ -99,9 +95,14 @@
         <div class="texto-mapa">
             <h2>¿Dónde nos encontramos? <i class="fas fa-map-marker-alt"></i>
             </h2>
-            <p>La casa se encuentra ubicada sobre una avenida principal, Avenida Agraciada 3002. Rodeada de 2 plazas, y un espacio de juegos agradable al que pueden acercarse para pasar un buen momento al aire libre.</p>
+            <p>Nuestra casa se encuentra ubicada sobre una avenida principal: “Avenida Agraciada” al 3002, cercana a otra gran avenida principal: “Avenida Suarez” y al “Boulevard Artiga”.
+
+                Se encuentra rodeada de 2 hermosas y conocidas plazas: Joaquín Suarez y San Martín
+                
+                A unos 12 metros aproximadamente, podrá encontrar un disco naturista, una farmacia y una zona de juegos para niños, muy agradable, al que pueden acercarse y pasar un buen momento al aire libre solos o en compañía de la familia.
+                </p>
             <div class="separador"></div>
-            <p>Estamos a 10 minutos del centro y en la puerta encontrará una parada de micros con varias líneas.</p>
+            <p>A diez minutos del centro, y con una parada de ómnibus con varias líneas en la puerta</p>
         </div>
         <section class="mapa contenedor" id="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
@@ -109,7 +110,7 @@
     </section>
     <section class="info-covid">
         <div class="texto-covid contenedor">
-            <h2>Información Covid</h2>
+            <h2>Novedades</h2>
             <i class="fas fa-virus"></i>
             <p>Actualmente las visitas y algunas actividades se encuentran suspendidas hasta nuevo aviso, debido al contexto de público conocimiento, tomando como referencia los protocolos del Ministerio de Salúd Pública.</p>
         </div>
@@ -137,8 +138,10 @@
             </div>
         </div>
         <div class="galeria-texto contenedor ">
-            <p>El equipo de trabajo es parte de un engranaje, indispensable y profesional, que junto a Enrique mantienen los pilares primordiales de la vocación de servicio y un trato digno, o como ellos dicen: <span>“Somos gente que cuidamos gente”</span>.
-                Cada persona que llega a Abuela Angelina es diferente, y aquí es donde nuestro equipo se destaca, priorizando siempre las necesidades de cada uno, desde su salud física hasta lo emocional.
+            <p>El equipo de trabajo es parte de un engranaje, indispensable y profesional con cursos y evaluaciones constantes, que entre todos mantenemos los pilares primordiales de la vocación de servicio y un trato digno, o como solemos decir: <span>“Somos gente que cuidamos gente”</span>.
+                Cada persona que llega a nuestra residencia es diferente, y aquí es donde nuestro equipo se destaca, priorizando siempre las necesidades de cada uno, desde su salud física hasta su salud emocional.
+                Abuela Angelina, es un gran espacio con un gran servicio.
+
             </p>
             <a class="boton-secundario" href="galeria.html">Ver más</a>
         </div>
@@ -148,11 +151,11 @@
         <div class="contenedor tabla-contactos">
             <div class="icono-contacto">
                 <i class="fas fa-phone-square-alt"></i>
-                <p>1555555555555</p>
+                <p>2614703370</p>
             </div>
             <div class="icono-contacto">
                 <i class="fab fa-whatsapp"></i>
-                <p>1555555555555</p>
+                <p>2614703370</p>
             </div>
             <div class="icono-contacto">
                 <i class="far fa-envelope"></i>
@@ -173,7 +176,7 @@
         <div class="footer-contenido contenedor">
             <div class="informacion">
                 <p>Dirección: <span>Avenida Agraciada 3002,Montevideo, Departamento de Montevideo, Uruguay.</span></p>
-                <p>Teléfono: <span>155555555555</span></p>
+                <p>Teléfono: <span>2614703370</span></p>
                 <p>Novedades: <span>Actualmente las visitas y algunas actividades se
                         encuentran suspendidas hasta nuevo aviso, debido al
                         contexto de público conocimiento, tomando como
