--- a/nosotros.html
+++ b/nosotros.html
@@ -14,9 +14,6 @@
     <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://kit.fontawesome.com/ce4b0e445d.js" crossorigin="anonymous"></script>
-    <script>
-    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-    </script>
 </head>
 
 <body>
@@ -41,7 +38,7 @@
         <h1>Residencia Abuela Angelina</h1>
         <div class="nosotros">
             <div class="texto-nosotros">
-                <p>"<span>Abuela Angelina</span>
+                <p><span>Abuela Angelina</span>
                     es una de las pocas residencias que hasta el día de la fecha es atendida por su dueño,
                     <span>Enrique</span>, quien nombró a este espacio bajo el nombre de una persona muy querida, y
                     recordada por su familia, como una mujer simpática y adorable. Su legado de cuidado y
@@ -49,7 +46,9 @@
                     Enrique cuenta con <span>más de 4 décadas de experiencia</span> en el cuidado de sus residentes,
                     caracterizado por su gran vocación de servicio y por su habilidad de comprender las
                     necesidades de quienes llegan a Abuela Angelina como también de acompañar y empatizar
-                    con sus familiares."</p>
+                    con sus familiares.</p>
+
+                <p class="frase">“Lo importante es compartir, somos seres sociales”</p>
             </div>
             <div class="imagen-nosotros">
                 <img src="img/seccion-nosotros.jpeg" alt="Abuelos">
@@ -93,13 +92,12 @@
         <h2>Recorrido por la casa</h2>
         <div class="nosotros-flex contenedor">
             <div class="casa-data">
-                <p>Nuestra casa cuenta con dos plantas, ventanales y altas puertas que conservan un aire no
-                    solamente encantador sino también cómodo.</p>
-                <p>Contamos con 5 baños, un ascensor como solución para nuestros residentes y con un gran
-                    jardín, amplio y con árboles frondosos, por supuesto, uno de los espacios preferidos, donde
-                    se dan muchas actividades y momentos de intercambio.</p>
-                <p>Nos ubicamos en una zona céntrica, rodeados de dos plazas, negocios, una avenida
-                    principal y varias líneas de colectivos para hacer más cómoda su visita.</p>
+                <p>Abuela Angelina es una casa que, con mucho trabajo y dedicación, ha sido refaccionada y mantenida constantemente, para ser el gran espacio que es hoy la residencia, adaptada a las necesidades de quienes residen en ella, para una total y verdadera comodidad.</p>
+                <p>Cuenta con dos plantas, varios baños, ascensor, un hermoso y gran jardín amplio con árboles frondosos considerado uno de los espacios preferidos de nuestros residentes, donde el mayor intercambio sucede.
+                </p>
+                <p>
+                    Nos ubicamos en una zona céntrica, rodeada de dos plazas, negocios, una avenida principal y varias líneas de colectivos para hacer más accesible su visita.
+                    </p>
                 <ul>
                     <li>Ascensor</li>
                     <li>5 baños</li>
@@ -127,7 +125,7 @@
         <div class="footer-contenido contenedor">
             <div class="informacion">
                 <p>Dirección: <span>Avenida Agraciada 3002,Montevideo, Departamento de Montevideo, Uruguay.</span></p>
-                <p>Teléfono: <span>155555555555</span></p>
+                <p>Teléfono: <span>2614703370</span></p>
                 <p>Novedades: <span>Actualmente las visitas y algunas actividades se
                         encuentran suspendidas hasta nuevo aviso, debido al
                         contexto de público conocimiento, tomando como
