--- a/index.html
+++ b/index.html
@@ -122,19 +122,19 @@
         </div>
         <div class="carousel center-align contenedor ">
             <div class="carousel-item">
-                <img src="img/img-galeria/54.JPG" alt="">
+                <img src="img/img-galeria/galeria1.png" alt="galeria">
             </div>
             <div class="carousel-item">
-                <img src="img/img-galeria/61.jpeg" alt="">
+                <img src="img/img-galeria/galeria2.JPG" alt="galeria">
             </div>
             <div class="carousel-item">
-                <img src="img/img-galeria/63.jpeg" alt="">
+                <img src="img/img-galeria/galeria3.jpeg" alt="galeria">
             </div>
             <div class="carousel-item">
-                <img src="img/img-galeria/65.jpeg" alt="">
+                <img src="img/img-galeria/galeria4.jpeg" alt="galeria">
             </div>
             <div class="carousel-item">
-                <img src="img/img-galeria/71.jpeg" alt="">
+                <img src="img/img-galeria/galeria5.jpeg" alt="galeria">
             </div>
         </div>
         <div class="galeria-texto contenedor ">
@@ -151,15 +151,15 @@
         <div class="contenedor tabla-contactos">
             <div class="icono-contacto">
                 <i class="fas fa-phone-square-alt"></i>
-                <p>2614703370</p>
+                <p>2209 9658 </p>
             </div>
             <div class="icono-contacto">
                 <i class="fab fa-whatsapp"></i>
-                <p>2614703370</p>
+                <p>099 376 138</p>
             </div>
             <div class="icono-contacto">
                 <i class="far fa-envelope"></i>
-                <p>abuela-angelina@gmail.com</p>
+                <p>abuelaangelina.info@gmail.com</p>
             </div>
         </div>
     </section>
@@ -176,7 +176,7 @@
         <div class="footer-contenido contenedor">
             <div class="informacion">
                 <p>Dirección: <span>Avenida Agraciada 3002,Montevideo, Departamento de Montevideo, Uruguay.</span></p>
-                <p>Teléfono: <span>2614703370</span></p>
+                <p>Teléfono: <span>2209 9658</span></p>
                 <p>Novedades: <span>Actualmente las visitas y algunas actividades se
                         encuentran suspendidas hasta nuevo aviso, debido al
                         contexto de público conocimiento, tomando como
