--- a/nosotros.html
+++ b/nosotros.html
@@ -38,15 +38,7 @@
         <h1>Residencia Abuela Angelina</h1>
         <div class="nosotros">
             <div class="texto-nosotros">
-                <p><span>Abuela Angelina</span>
-                    es una de las pocas residencias que hasta el día de la fecha es atendida por su dueño,
-                    <span>Enrique</span>, quien nombró a este espacio bajo el nombre de una persona muy querida, y
-                    recordada por su familia, como una mujer simpática y adorable. Su legado de cuidado y
-                    dedicación, son los valores que dejaron una huella en este hogar.
-                    Enrique cuenta con <span>más de 4 décadas de experiencia</span> en el cuidado de sus residentes,
-                    caracterizado por su gran vocación de servicio y por su habilidad de comprender las
-                    necesidades de quienes llegan a Abuela Angelina como también de acompañar y empatizar
-                    con sus familiares.</p>
+                <p>"<span>Abuela Angelina</span> es una hogareña residencia, atendida a diario por su dueño, Enrique, quien nombró a este espacio bajo el nombre de una persona muy querida y recordada por su familia, como una mujer simpática y adorable. Su legado de cuidado y dedicación, son los valores que dejaron una huella en este hogar</p>
 
                 <p class="frase">“Lo importante es compartir, somos seres sociales”</p>
             </div>
@@ -107,8 +99,8 @@
                 </ul>
             </div>
             <div class="imagenes">
-                <img src="img/abuelos.jpg" alt="casa">
-                <img src="img/abuelos.jpg" alt="casa">
+                <img src="img/recorrido1.jpeg" alt="casa">
+                <img src="img/recorrido2.JPG" alt="casa">
             </div>
         </div>
     </section>
@@ -125,7 +117,7 @@
         <div class="footer-contenido contenedor">
             <div class="informacion">
                 <p>Dirección: <span>Avenida Agraciada 3002,Montevideo, Departamento de Montevideo, Uruguay.</span></p>
-                <p>Teléfono: <span>2614703370</span></p>
+                <p>Teléfono: <span>2209 9658</span></p>
                 <p>Novedades: <span>Actualmente las visitas y algunas actividades se
                         encuentran suspendidas hasta nuevo aviso, debido al
                         contexto de público conocimiento, tomando como
