--- a/servicios.html
+++ b/servicios.html
@@ -135,15 +135,15 @@
         <div class="contenedor tabla-contactos">
             <div class="icono-contacto">
                 <i class="fas fa-phone-square-alt"></i>
-                <p>2614703370</p>
+                <p>2209 9658 </p>
             </div>
             <div class="icono-contacto">
                 <i class="fab fa-whatsapp"></i>
-                <p>2614703370</p>
+                <p>099 376 138</p>
             </div>
             <div class="icono-contacto">
                 <i class="far fa-envelope"></i>
-                <p>abuela-angelina@gmail.com</p>
+                <p>abuelaangelina.info@gmail.com</p>
             </div>
         </div>
     </section>
@@ -152,7 +152,7 @@
         <div class="footer-contenido contenedor">
             <div class="informacion">
                 <p>Dirección: <span>Avenida Agraciada 3002,Montevideo, Departamento de Montevideo, Uruguay.</span></p>
-                <p>Teléfono: <span>2614703370</span></p>
+                <p>Teléfono: <span>2209 9658</span></p>
                 <p>Novedades: <span>Actualmente las visitas y algunas actividades se
                         encuentran suspendidas hasta nuevo aviso, debido al
                         contexto de público conocimiento, tomando como
