--- a/galeria.html
+++ b/galeria.html
@@ -37,132 +37,45 @@
         <h1>Galería de Imagenes</h1>
         <div class="contenedor">
             <div class="galeria galeria-interna">
-                <a href="img/imagenes-geriatrico/1.jpeg" data-lightbox="galeria">
-                    <img src="img/imagenes-geriatrico/1.jpeg"></a>
-                <a href="img/imagenes-geriatrico/2.jpeg" data-lightbox="galeria">
-                    <img src="img/imagenes-geriatrico/2.jpeg">
+                <a href="img/imagenes-geriatrico/galeria1.jpg" data-lightbox="galeria">
+                    <img src="img/imagenes-geriatrico/galeria1.jpg"></a>
+                <a href="img/imagenes-geriatrico/galeria2.JPG" data-lightbox="galeria">
+                    <img src="img/imagenes-geriatrico/galeria2.JPG">
                 </a>
-                <a href="img/imagenes-geriatrico/3.jpeg" data-lightbox="galeria">
-                    <img src="img/imagenes-geriatrico/3.jpeg">
-                    <a href="img/imagenes-geriatrico/5.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/5.JPG">
+                <a href="img/imagenes-geriatrico/galeria3.JPG" data-lightbox="galeria">
+                    <img src="img/imagenes-geriatrico/galeria3.JPG">
+                    <a href="img/imagenes-geriatrico/galeria4.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/galeria4.JPG">
                     </a>
-                    <a href="img/imagenes-geriatrico/7.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/7.JPG">
+                    <a href="img/imagenes-geriatrico/galeria5.jpg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/galeria5.jpg">
                     </a>
-                    <a href="img/imagenes-geriatrico/9.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/9.JPG">
+                    <a href="img/imagenes-geriatrico/galeria6.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/galeria6.JPG">
                     </a>
-                    <a href="img/imagenes-geriatrico/11.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/11.JPG">
+                    <a href="img/imagenes-geriatrico/galeria7.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/galeria7.JPG">
                     </a>
-                    <a href="img/imagenes-geriatrico/13.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/13.JPG">
+                    <a href="img/imagenes-geriatrico/galeria8.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/galeria8.JPG">
                     </a>
-                    <a href="img/imagenes-geriatrico/15.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/15.JPG">
+                    <a href="img/imagenes-geriatrico/galeria9.JPG" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/galeria9.JPG">
                     </a>
-                    <a href="img/imagenes-geriatrico/17.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/17.JPG">
+                    <a href="img/imagenes-geriatrico/galeria10.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/galeria10.jpeg">
                     </a>
-                    <a href="img/imagenes-geriatrico/19.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/19.JPG">
+                    <a href="img/imagenes-geriatrico/galeria11.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/galeria11.jpeg">
                     </a>
-                    <a href="img/imagenes-geriatrico/21.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/21.JPG">
+                    <a href="img/imagenes-geriatrico/galeria12.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/galeria12.jpeg">
                     </a>
-                    <a href="img/imagenes-geriatrico/23.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/23.JPG">
+                    <a href="img/imagenes-geriatrico/galeria13.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/galeria13.jpeg">
                     </a>
-                    <a href="img/imagenes-geriatrico/25.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/25.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/27.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/27.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/29.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/29.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/31.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/31.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/34.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/34.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/36.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/36.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/38.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/38.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/40.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/40.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/42.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/42.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/44.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/44.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/46.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/46.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/48.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/48.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/46.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/46.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/52.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/52.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/54.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/54.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/46.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/46.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/58.JPG" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/58.JPG">
-                    </a>
-                    <a href="img/imagenes-geriatrico/60.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/60.jpeg">
-                    </a>
-                    <a href="img/imagenes-geriatrico/61.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/60.jpeg">
-                    </a>
-                    <a href="img/imagenes-geriatrico/62.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/62.jpeg">
-                    </a>
-                    <a href="img/imagenes-geriatrico/63.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/63.jpeg">
-                    </a>
-                    <a href="img/imagenes-geriatrico/64.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/64.jpeg">
-                    </a>
-                    <a href="img/imagenes-geriatrico/65.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/65.jpeg">
-                    </a>
-                    <a href="img/imagenes-geriatrico/66.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/66.jpeg">
-                    </a>
-                    <a href="img/imagenes-geriatrico/67.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/67.jpeg">
-                    </a>
-                    <a href="img/imagenes-geriatrico/68.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/68.jpeg">
-                    </a>
-                    <a href="img/imagenes-geriatrico/69.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/69.jpeg">
-                    </a>
-                    <a href="img/imagenes-geriatrico/70.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/70.jpeg">
-                    </a>
-                    <a href="img/imagenes-geriatrico/71.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/71.jpeg">
-                    </a>
-                    <a href="img/imagenes-geriatrico/72.jpeg" data-lightbox="galeria">
-                        <img src="img/imagenes-geriatrico/72.jpeg">
+                    <a href="img/imagenes-geriatrico/galeria14.jpeg" data-lightbox="galeria">
+                        <img src="img/imagenes-geriatrico/galeria14.jpeg">
                     </a>
             </div>
         </div>
@@ -172,7 +85,7 @@
         <div class="footer-contenido contenedor">
             <div class="informacion">
                 <p>Dirección: <span>Avenida Agraciada 3002,Montevideo, Departamento de Montevideo, Uruguay.</span></p>
-                <p>Teléfono: <span>2614703370</span></p>
+                <p>Teléfono: <span>2209 9658</span></p>
                 <p>Novedades: <span>Actualmente las visitas y algunas actividades se
                         encuentran suspendidas hasta nuevo aviso, debido al
                         contexto de público conocimiento, tomando como
